# aurora-plugin-sounddevice

./: .gitignore  README.md  pyproject.toml
src/aurora_plugin_sounddevice/: __init__.py  __main__.py  config.py  helpers.py  queues.py
